refactor login, add Tokenrefresh, UI checkbox

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,8 @@
     </h1>
   </div>
   <nav class="row">
-      <a routerLink="/playlists">Deezer Playlists</a>
-      <a href="https://accounts.spotify.com:443/authorize?client_id=7d07b872cce640509707a31825d5ac2f&response_type=code&redirect_uri=http%3A%2F%2Flocalhost%3A4200%2Fspotify_callback&scope=user-read-email%2Cuser-read-birthdate%2Cplaylist-read-private%2Cplaylist-modify-private%2Cplaylist-modify-public">Spotify Login</a>
+      <a routerLink="/playlists">Deezer Playlists</a> |
+      <a routerLink="/login">Spotify Login</a>
     </nav>
   <app-messages class="row"></app-messages>
   <router-outlet class="row"></router-outlet>
