--- a/src/app/playlist/playlist.component.html
+++ b/src/app/playlist/playlist.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="playlist && playlist.tracks.length > 0">
+<div *ngIf="playlist && playlist.tracks.length > 0" class="text-left">
   <h2>{{playlist.title}} Details</h2>
   <div><span>id: </span>{{playlist.id}}</div>
   <div><span>title: </span>{{playlist.title}}</div>
