--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,7 @@ h1 {
   }
   body {
     margin: 2em;
+    background-color: ghostwhite;
   }
   body, input[type="text"], button {
     color: #888;
