User Info step with deezer id input, renamed stepsnavbar to wizard-navigation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,19 +10,9 @@
       <div class="col"></div>
   </div>
   <div class="row">
-      <div class="col"></div>
-      <div class="col-10">  
-        <nav class="nav">
-          <a routerLink="/playlists">Deezer Playlists</a> |
-          <a routerLink="/login">Spotify Login</a>
-        </nav>
-      </div>
-      <div class="col"></div>
-    </div>
-  <div class="row">
     <div class="col"></div>
     <div class="col-10 mx-auto p-2 text-center">
-      <app-stepsnavbar></app-stepsnavbar>
+      <app-wizard-navigation></app-wizard-navigation>
     </div>
     <div class="col"></div>
   </div>
